@@ -1,9 +1,10 @@
 from .case_type import CaseType
-from .milestone import Milestone
+from .milestone import Milestone, SubMilestone
 from .priority import Priority
 from .project import Project
 from .status import Status
 from .template import Template
 from .user import User
 
-__all__ = ['CaseType', 'Milestone', 'Priority', 'Project', 'Status', 'Template', 'User']
+__all__ = ['CaseType', 'Milestone', 'Priority', 'Project', 'Status', 'SubMilestone',
+           'Template', 'User']
